crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__emoji_identifier.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: "lex_invalid(source, Mode::Module)"
---
## Tokens
```
[
    (
        Unknown,
        0..4,
    ),
]
```
## Errors
```
[
    LexicalError {
        error: UnrecognizedToken {
            tok: '🐦',
        },
        location: 0..4,
    },
]
```
